--- a/data/cards/25401880.yaml
+++ b/data/cards/25401880.yaml
@@ -32,7 +32,7 @@ text:
     800 라이프 포인트를 지불하고, 게임에서 제외되어 있는 자신의 사이킥족 몬스터를 2장까지 선택하여 발동한다. 선택한 몬스터를 자신의 패에 넣는다.
   zh-TW:
   zh-CN: |-
-    ①：支付800基本分，以除外的最多2只自己的念动力族怪兽为对象才能发动。那些怪兽加入手卡。
+    ①：支付８００LP，以最多２只被除外的自己的念动力族怪兽为对象可以发动。将该怪兽加入手牌。
 card_type: Spell
 property: Normal
 images:
@@ -71,6 +71,11 @@ sets:
   ko:
   - set_number: RGBT-KR058
     set_name: Raging Battle
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC130
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
