--- a/data/cards/51053997.yaml
+++ b/data/cards/51053997.yaml
@@ -12,7 +12,7 @@ name:
   ko: <ruby>PSY<rt>싸이</rt></ruby>프레임 엑셀러레이터
   ko_rr:
   zh-TW:
-  zh-CN: PSY骨架加速器
+  zh-CN: 精神骨架加速器
 text:
   en: |-
     Once per turn: You can pay 500 LP, then target 1 "PSY-Frame" monster you control; banish it until your next Standby Phase. Once per turn, if another face-up "PSY-Frame" card you control leaves the field (except during the Damage Step): You can Special Summon 1 "PSY-Frame" monster from your hand.
@@ -32,7 +32,7 @@ text:
     ①: 1턴에 1번, 500 LP를 지불하고, 자신 필드의 "PSY(싸이)프레임" 몬스터 1장을 대상으로 하여 발동할 수 있다. 그 몬스터를 다음 자신의 스탠바이 페이즈까지 제외한다. ②: 1턴에 1번, 이 카드 이외의 자신 필드 앞면 표시의 "PSY(싸이)프레임" 카드가 전투 이외로 필드에서 벗어났을 경우에 발동할 수 있다. 패에서 "PSY(싸이)프레임" 몬스터 1장을 특수 소환한다.
   zh-TW:
   zh-CN: |-
-    ①：1回合1次，支付500基本分，以自己场上1只「PSY骨架」怪兽为对象才能发动。那只怪兽直到下次的自己准备阶段除外。②：1回合1次，这张卡以外的自己场上的表侧表示的「PSY骨架」卡因战斗以外从场上离开的场合才能发动。从手卡把1只「PSY骨架」怪兽特殊召唤。
+    ①：１回合１次，支付５００LP，以自己场上的１只“精神骨架”怪兽为对象可以发动。将该怪兽直至下一个自己准备阶段为止除外。②：１回合１次，此卡已存在于魔法与陷阱区域的状态下，自己场上此卡以外的表侧表示“精神骨架”卡因战斗以外的原因从场上离开的情况下可以发动。从手牌将１只“精神骨架”怪兽特殊召唤。
 card_type: Trap
 property: Continuous
 series:
@@ -94,6 +94,11 @@ sets:
   ko:
   - set_number: INOV-KR074
     set_name: 'Invasion: Vengeance'
+    rarities:
+    - Common
+  zh-CN:
+  - set_number: CL02-SC129
+    set_name: Classic Pack 02
     rarities:
     - Common
 limit_regulation:
