--- a/rush.yaml
+++ b/rush.yaml
@@ -40787,7 +40787,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Set 1 "Ruler's Current", "Ruler's Deadly Duel", or "Ruler's Dance" from your Graveyard to your Spell & Trap Zone.
+    Set 1 "Ruler's Current", "Ruler's Deadly Duel", or "Ruler's Dance" from your Graveyard in your Spell & Trap Zone.
   de:
   es:
   fr:
