--- a/data/cards/59071624.yaml
+++ b/data/cards/59071624.yaml
@@ -15,7 +15,8 @@ name:
   zh-CN: 树栖蚁之虫惑魔
 text:
   en: |-
-    2+ Level 4 monsters / This card is unaffected by Trap effects while it has Xyz Material. You can only use each of the following effects of "Traptrix Allomerus" once per turn.
+    2+ Level 4 monsters
+    Unaffected by Trap effects while it has material. You can only use each of the following effects of "Traptrix Allomerus" once per turn.
     ● You can detach 2 materials from this card; Special Summon 1 Level 4 Insect or Plant monster from your GY.
     ● If an opponent's monster(s) leaves the field because of your card effect, and is now in the GY or banished (except during the Damage Step): You can detach 1 material from this card, then target 1 of them; Special Summon it to your field.
   de: |-
@@ -63,7 +64,7 @@ series:
 - Traptrix
 images:
 - index: 1
-  image: '  TraptrixAllomerus-SD45-JP-NPR.png  '
+  image: '  TraptrixAllomerus-LART-EN-UR-LE.png'
   illustration: TraptrixAllomerus-MADU-JP-VG-artwork.png
 - index: '1.1'
   image: TraptrixAllomerus-MP21-EN-SR-1E.png
@@ -79,6 +80,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: LART-EN055
+    set_name: The Lost Art Promotion 2023 B
+    rarities:
+    - Ultra Rare
   - set_number: SDBT-EN040
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
@@ -97,6 +102,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: LART-DE055
+    set_name: The Lost Art Promotion 2023 B
+    rarities:
+    - Ultra Rare
   fr:
   - set_number: ETCO-FR045
     set_name: Eternity Code
@@ -107,6 +116,10 @@ sets:
     set_name: 2021 Tin of Ancient Battles
     rarities:
     - Super Rare
+  - set_number: LART-FR055
+    set_name: The Lost Art Promotion 2023 B
+    rarities:
+    - Ultra Rare
   - set_number: SDBT-FR040
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
@@ -125,6 +138,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: LART-IT055
+    set_name: The Lost Art Promotion 2023 B
+    rarities:
+    - Ultra Rare
   pt:
   - set_number: ETCO-PT045
     set_name: Eternity Code
@@ -139,6 +156,10 @@ sets:
     set_name: 'Structure Deck: Beware of Traptrix'
     rarities:
     - Common
+  - set_number: LART-PT055
+    set_name: The Lost Art Promotion 2023 B
+    rarities:
+    - Ultra Rare
   ja:
   - set_number: ETCO-JP045
     set_name: Eternity Code
