--- a/rush.yaml
+++ b/rush.yaml
@@ -91954,3 +91954,54 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 935972
+---
+konami_id:
+name:
+  en: Masenkou, the Lashing Light
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>殲<rt>せん</rt></ruby><ruby>光<rt>こう</rt></ruby>
+  ja_romaji: Masenkō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If you have "Summoned Skull" face-up on your field, send 1 Fiend Type monster from your hand to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy all Attack Position Level 8 or lower monsters on your opponent's field. This turn, your Effect Monsters cannot attack.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Normal
+images:
+- index: 1
+  image: MasenkoutheLashingLight-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP044
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 936145
