--- a/data/cards/58346901.yaml
+++ b/data/cards/58346901.yaml
@@ -12,7 +12,7 @@ name:
   ko: 불꽃성기사－올리비에
   ko_rr: Pulkkotseonggisa - Ollibie
   zh-TW:
-  zh-CN: 焰圣骑士-奥利佛
+  zh-CN: 焰圣骑士－奥利弗
 text:
   en: |-
     While this card is an Equip Card, your opponent cannot target the equipped monster with card effects. You can only use each of the following effects of "Infernoble Knight Oliver" once per turn. You can send 1 FIRE Warrior monster or 1 Equip Spell from your hand or face-up field to the GY; Special Summon this card from your hand as a Level 1 monster. If this card is in your GY: You can target 1 Warrior monster you control; equip this card to that monster you control.
@@ -32,10 +32,7 @@ text:
     이 카드명의 ①②의 효과는 각각 1턴에 1번밖에 사용할 수 없다. ①: 패 및 자신 필드의 앞면 표시의 카드 중에서, 전사족 / 화염 속성 몬스터 1장 또는 장착 마법 카드 1장을 묘지로 보내고 발동할 수 있다. 이 카드를 패에서 레벨 1 몬스터로서 특수 소환한다. ②: 이 카드가 묘지에 존재할 경우, 자신 필드의 전사족 몬스터 1장을 대상으로 하고 발동할 수 있다. 이 카드를 장착 카드로 취급하여 그 자신 몬스터에 장착한다. ③: 이 카드의 장착 몬스터는 상대 효과의 대상이 되지 않는다.
   zh-TW:
   zh-CN: |-
-    这个卡名的①②的效果1回合各能使用1次。
-    ①：从手卡以及自己场上的表侧表示的卡之中把1只战士族·炎属性怪兽或者1张装备魔法卡送去墓地才能发动。这张卡从手卡作为1星怪兽特殊召唤。
-    ②：这张卡在墓地存在的场合，以自己场上1只战士族怪兽为对象才能发动。这张卡当作装备卡使用给那只自己怪兽装备。
-    ③：这张卡的装备怪兽不会成为对方的效果的对象。
+    此卡名的①②效果１回合仅可各使用１次。①：从手牌及自己场上表侧表示卡中，将１只战士族・炎属性怪兽或１张装备魔法卡送至墓地可以发动。从手牌将此卡作为等级１怪兽特殊召唤。②：此卡存在于墓地的情况下，以自己场上的１只战士族怪兽为对象可以发动。将此卡视为装备卡装备于自己的该怪兽。③：此卡装备的怪兽不会成为对手效果的对象。
 card_type: Monster
 monster_type_line: Warrior / Tuner / Effect
 attribute: FIRE
@@ -104,6 +101,10 @@ sets:
     set_name: Rise of the Duelist
     rarities:
     - Common
+  - set_number: MGP5-SC014
+    set_name: Mega Pack 05
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
