--- a/rush.yaml
+++ b/rush.yaml
@@ -27833,6 +27833,10 @@ sets:
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
     rarities:
     - Rush Rare
+  - set_number: RD/LGP1-JP015
+    set_name: Legend Awakening Pack
+    rarities:
+    - Rare
   ko:
   - set_number: RD/KP05-KR000
     set_name: 'Deck Mod Pack: Dynamic Eternal Live!!'
@@ -92295,3 +92299,213 @@ sets:
     rarities:
     - Common
 yugipedia_page_id: 936159
+---
+konami_id:
+name:
+  en: Archfiend Warrior
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: デーモン・ウォリアー
+  ja_romaji: Dēmon Woriā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    You have another face-up Fiend Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Send the top 3 cards of your Deck to the Graveyard. If a Level 6 Fiend Type monster(s) is among the cards sent, draw 1 card.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 900
+images:
+- index: 1
+  image: ArchfiendWarrior-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP009
+    set_name: Legend Awakening Pack
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 936511
+---
+konami_id:
+name:
+  en: Class-Change Mirror
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>昇<rt>しょう</rt></ruby><ruby>格<rt>かく</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>鏡<rt>きょう</rt></ruby>
+  ja_romaji: Shōkaku no Makyō
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Place 1 other monster from your field on the bottom of the owner's Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Special Summon 1 "Summoned Skull" from your Graveyard face-up to your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 3
+atk: 1300
+def: 800
+images:
+- index: 1
+  image: ClassChangeMirror-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP034
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 936512
+---
+konami_id:
+name:
+  en: Meteor Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    This dragon appeared from the sky and crashed to the earth.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    宇宙の果てから地球におちてきた、流星のドラゴン。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Normal
+attribute: EARTH
+level: 6
+atk: 1800
+def: 2000
+images:
+- index: 1
+  image: MeteorDragon-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP029
+    set_name: Legend Awakening Pack
+    rarities:
+    - Common
+yugipedia_page_id: 936516
+---
+konami_id:
+name:
+  en: Meteor Black Dragon
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+text:
+  en: |-
+    "Red-Eyes Black Dragon" + "Meteor Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Dragon / Fusion
+attribute: FIRE
+level: 8
+atk: 3500
+def: 2000
+materials:
+  en: |-
+    "Red-Eyes Black Dragon" + "Meteor Dragon"
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: MeteorBlackDragon-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP000
+    set_name: Legend Awakening Pack
+    rarities:
+    - Over Rush Rare
+yugipedia_page_id: 936517
