--- a/data/cards/00844056.yaml
+++ b/data/cards/00844056.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: レッドアローズ
   ja_romaji: Reddo Arōzu
-  ko:
-  ko_rr:
+  ko: 레드애로우즈
+  ko_rr: Redeu-aeroujeu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：ＥＸモンスターゾーンの表側表示モンスターを２体まで対象として発動できる。そのモンスターをエンドフェイズまで除外する。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 엑스트라 몬스터 존의 앞면 표시 몬스터를 2장까지 대상으로 하고 발동할 수 있다. 그 몬스터를 엔드 페이즈까지 제외한다.
   zh-TW:
   zh-CN:
 card_type: Spell
