--- a/data/cards/16475472.yaml
+++ b/data/cards/16475472.yaml
@@ -10,7 +10,7 @@ name:
   ja: レッサー・デーモン
   ja_romaji: Ressā Dēmon
   ko: 레서 데몬
-  ko_rr:
+  ko_rr: Reseo Demon
   zh-TW:
   zh-CN: 下位恶魔
 text:
@@ -35,7 +35,7 @@ text:
   ja: |-
     このカードがフィールド上に表側表示で存在する限り、このカードが戦闘によって破壊したモンスターは墓地へは行かずゲームから除外される。
   ko: |-
-    이 카드가 앞면 표시로 필드 위에 존재하는 한, 이 카드가 전투에 의해서 파괴한 몬스터는 묘지로 가지 않고 게임에서 제외된다.
+    ①: 이 카드가 몬스터 존에 존재하는 한, 이 카드가 전투로 파괴한 몬스터는 묘지로는 가지 않으며 제외된다.
   zh-TW:
   zh-CN: |-
     只要这张卡在场上表侧表示存在，这张卡战斗破坏的怪兽不去墓地从游戏中除外。
