--- a/data/cards/36848764.yaml
+++ b/data/cards/36848764.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: スウィートルームメイド
   ja_romaji: Suwīto Rūmu Meido
-  ko:
-  ko_rr:
+  ko: 스위트룸메이드
+  ko_rr: Seuwiteurummeideu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名のカードは１ターンに１枚しか発動できない。①：自分または相手の手札・デッキからカードが墓地へ送られた場合、自分または相手の墓地のカード１枚を対象として発動できる。そのカードを持ち主のデッキに戻す。
-  ko:
+  ko: |-
+    이 카드명의 카드는 1턴에 1장밖에 발동할 수 없다. ①: 자신 또는 상대의 패 / 덱에서 카드가 묘지로 보내졌을 경우, 자신 또는 상대 묘지의 카드 1장을 대상으로 하고 발동할 수 있다. 그 카드를 주인의 덱으로 되돌린다.
   zh-TW:
   zh-CN:
 card_type: Spell
