--- a/data/cards/47961342.yaml
+++ b/data/cards/47961342.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: <ruby>転<rt>てん</rt></ruby><ruby>轍<rt>てつ</rt></ruby><ruby>地<rt>ち</rt></ruby><ruby>点<rt>てん</rt></ruby>
   ja_romaji: Tentetsuchiten
-  ko:
-  ko_rr:
+  ko: 전철지점
+  ko_rr: Cheoncheoljijeom
   zh-TW:
   zh-CN:
 text:
@@ -25,7 +25,10 @@ text:
     ①：相手フィールドにモンスターが３体以上存在する場合、その内の１体を選ぶ。相手は以下のいずれかを墓地へ送らなければならない。
     ●選んだモンスター
     ●選んだモンスター以外の自身のフィールドの全てのモンスター
-  ko:
+  ko: |-
+    ①: 상대 필드에 몬스터가 3장 이상 존재할 경우, 그 중의 1장을 고른다. 상대는 이하의 어느 것을 묘지로 보내야 한다.
+    ●고른 몬스터
+    ●고른 몬스터 이외의 자신 필드의 모든 몬스터
   zh-TW:
   zh-CN:
 card_type: Trap
