--- a/data/cards/53982768.yaml
+++ b/data/cards/53982768.yaml
@@ -10,7 +10,7 @@ name:
   ja: <ruby>冥<rt>めい</rt></ruby><ruby>界<rt>かい</rt></ruby>の<ruby>魔<rt>ま</rt></ruby><ruby>王<rt>おう</rt></ruby> ハ・デス
   ja_romaji: Meikai no Maō Ha Desu
   ko: 명계의 마왕 하데스
-  ko_rr:
+  ko_rr: Myeonggye-ui Mawang Hadeseu
   zh-TW:
   zh-CN: 冥界的魔王 哈·迪斯
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     このカードは墓地からの特殊召喚はできない。①：このカードがモンスターゾーンに存在する限り、自分の悪魔族モンスターが戦闘でモンスターを破壊した場合、その破壊されたモンスターはフィールド・墓地に存在する限り効果が無効化される。
   ko: |-
-    이 카드가 앞면 표시로 필드 위에 존재하는 한, 자신의 필드 위의 악마족 몬스터가 전투에서 파괴한 효과 몬스터의 효과는 무효화된다. 이 카드는 묘지에서 특수 소환할 수 없다.
+    이 카드는 묘지에서의 특수 소환은 할 수 없다. ①: 이 카드가 몬스터 존에 존재하는 한, 자신의 악마족 몬스터가 전투로 몬스터를 파괴했을 경우, 그 파괴된 몬스터는 필드 / 묘지에 존재하는 한 효과가 무효화된다.
   zh-TW:
   zh-CN: |-
     这张卡不能作从墓地的特殊召唤。只要这张卡在场上表侧表示存在，自己场上存在的恶魔族怪兽战斗破坏的效果怪兽的效果无效化。
