--- a/data/cards/72233469.yaml
+++ b/data/cards/72233469.yaml
@@ -9,8 +9,8 @@ name:
   pt:
   ja: リィラップ
   ja_romaji: Ryirappu
-  ko:
-  ko_rr:
+  ko: 리일라프
+  ko_rr: Riillapeu
   zh-TW:
   zh-CN:
 text:
@@ -23,7 +23,8 @@ text:
   pt:
   ja: |-
     このカード名の効果は同一チェーン上では１度しか発動できない。①：１ターンに１度、自分が墓地からモンスターを特殊召喚した場合に発動できる。相手は１０００ＬＰを失い、自分は５００ＬＰ回復する。
-  ko:
+  ko: |-
+    이 카드명의 효과는 동일한 체인 위에서는 1번밖에 발동할 수 없다. ①: 1턴에 1번, 자신이 묘지에서 몬스터를 특수 소환했을 경우에 발동할 수 있다. 상대는 1000 LP를 상실하고, 자신은 500 LP 회복한다.
   zh-TW:
   zh-CN:
 card_type: Spell
