--- a/data/cards/73599290.yaml
+++ b/data/cards/73599290.yaml
@@ -10,7 +10,7 @@ name:
   ja: ソウルドレイン
   ja_romaji: Sōru Dorein
   ko: 소울 드레인
-  ko_rr:
+  ko_rr: Soul Deurein
   zh-TW: 靈魂抽取
   zh-CN: 灵魂抽取
 text:
@@ -29,7 +29,7 @@ text:
   ja: |-
     １０００ライフポイントを払って発動できる。このカードがフィールド上に存在する限り、ゲームから除外されているモンスターの効果及び墓地に存在するモンスターの効果は発動できない。
   ko: |-
-    1000 라이프 포인트를 지불하고 발동할 수 있다. 이 카드가 필드 위에 존재하는 한, 게임에서 제외되어 있는 몬스터의 효과 및 묘지에 존재하는 몬스터의 효과는 발동할 수 없다.
+    1000 LP를 지불하고 이 카드를 발동할 수 있다. ①: 이 카드가 마법 & 함정 존에 존재하는 한, 묘지의 몬스터 및 제외되어 있는 몬스터의 효과는 발동할 수 없다.
   zh-TW: |-
     可支付1000生命点数发动。只要此卡存在于场上，被从游戏中除外的怪兽的效果和存在于墓地的怪兽的效果均不可发动。
   zh-CN: |-
