--- a/data/rush/yugipedia934285.yaml
+++ b/data/rush/yugipedia934285.yaml
@@ -1,6 +1,6 @@
 konami_id:
 name:
-  en: Prectclimb of the Deadly Dirge
+  en: Plectcrime of the Deadly Dirge
   de:
   es:
   fr:
@@ -46,7 +46,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: PrectclimboftheDeadlyDirge-RDSJMP-JP-OP.png
+  image: PlectcrimeoftheDeadlyDirge-RDSJMP-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP025
