--- a/rush.yaml
+++ b/rush.yaml
@@ -91312,7 +91312,7 @@ yugipedia_page_id: 934278
 ---
 konami_id:
 name:
-  en: Prectclimb of the Deadly Dirge
+  en: Plectcrime of the Deadly Dirge
   de:
   es:
   fr:
@@ -91358,7 +91358,7 @@ series:
 - Shaman Bandit
 images:
 - index: 1
-  image: PrectclimboftheDeadlyDirge-RDSJMP-JP-OP.png
+  image: PlectcrimeoftheDeadlyDirge-RDSJMP-JP-OP.png
 sets:
   ja:
   - set_number: RD/SJMP-JP025
