--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -1,4 +1,4 @@
-# SPDX-FileCopyrightText: © 2022 Kevin Lu
+# SPDX-FileCopyrightText: © 2022–2023 Kevin Lu
 # SPDX-Licence-Identifier: AGPL-3.0-or-later
 name: Merge all data sources
 
@@ -35,7 +35,11 @@ jobs:
           python-version: "3.10"
           cache: pip
           cache-dependency-path: yaml-yugi/src/requirements.txt
-      - run: cd .. && curl -fsSLO https://github.com/DawnbrandBots/yaml-yugi-ko/raw/master/overrides.tsv
+      - name: Download yaml-yugi-ko exports
+        run: |
+          cd ..
+          curl -fsSLO https://github.com/DawnbrandBots/yaml-yugi-ko/raw/master/overrides.tsv
+          curl -fsSLO https://dawnbrandbots.github.io/yaml-yugi-ko/ocg.csv
       - run: pip install -r src/requirements.txt
       - name: Transform (series)
         working-directory: yaml-yugi/data/series
@@ -51,6 +55,7 @@ jobs:
             --tcg ../../data/limit-regulation/tcg/2023-02-13.vector.json \
             --ocg ../../data/limit-regulation/ocg/2023-01-01.name.json \
             --ko ../../../overrides.tsv \
+            --ko-csv ../../../ocg.csv \
             --aggregate ../../../aggregate/cards.json
       - name: Transform (Rush Duel)
         working-directory: yaml-yugi/data/rush
