--- a/data/cards/86676862.yaml
+++ b/data/cards/86676862.yaml
@@ -113,6 +113,11 @@ sets:
     set_name: 'Legendary Duelists: Season 3'
     rarities:
     - Common
+  - set_number: SGX3-FRA21
+    set_name: 'Speed Duel GX: Duelists of Shadows'
+    rarities:
+    - Common
+    - Secret Rare
   it:
   - set_number: DP06-IT013
     set_name: 'Duelist Pack: Jaden Yuki 3'
