--- a/rush.yaml
+++ b/rush.yaml
@@ -92522,3 +92522,112 @@ sets:
     rarities:
     - Over Rush Rare
 yugipedia_page_id: 936517
+---
+konami_id:
+name:
+  en: Return
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    When your opponent adds a card from the Graveyard to the hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Shuffle 1 random card from your opponent's hand into the Deck.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Trap
+property: Normal
+images:
+- index: 1
+  image: Return-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP027
+    set_name: Legend Awakening Pack
+    rarities:
+    - Rare
+yugipedia_page_id: 937480
+---
+konami_id:
+name:
+  en: Maju Garzett
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    This card gains ATK equal to [the total original ATK of the 2 monsters Tributed for the Tribute Summon of this card in Attack Position].
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Fiend / Effect
+attribute: DARK
+level: 7
+atk: 0
+def: 0
+images:
+- index: 1
+  image: MajuGarzett-RDLGP1-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/LGP1-JP004
+    set_name: Legend Awakening Pack
+    rarities:
+    - Ultra Rare
+    - Secret Rare
+yugipedia_page_id: 937482
