--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -77,7 +77,7 @@ jobs:
           git config user.email noreply@github.com
           git add .
           git commit -m "Transform: ${{ github.run_number }} (${{ github.run_id }})"
-          git pull --rebase
+          git pull --rebase origin master
           git push
       - name: Merge
         run: |
@@ -90,7 +90,7 @@ jobs:
           git config user.email noreply@github.com
           git add .
           git commit -m "Merge: ${{ github.run_number }} (${{ github.run_id }})" -m "$(git -C ../yaml-yugi rev-parse @)"
-          git pull --rebase
+          git pull --rebase origin aggregate
           git push
       - uses: actions/setup-node@v3
         with:
