--- a/data/rush/18702.yaml
+++ b/data/rush/18702.yaml
@@ -27,7 +27,7 @@ requirement:
   zh-CN:
 effect:
   en: |-
-    Fusion Summon by sending monsters from your hand or field to the Graveyard as material.
+    Fusion Summon by sending monsters from your hand and/or field to the Graveyard as material.
   de:
   es:
   fr:
