--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -41,9 +41,9 @@ jobs:
           curl -fsSLO https://github.com/DawnbrandBots/yaml-yugi-ko/raw/master/overrides.tsv
           curl -fsSLO https://dawnbrandbots.github.io/yaml-yugi-ko/ocg.csv
       - run: pip install -r src/requirements.txt
-      - name: Transform (series)
-        working-directory: yaml-yugi/data/series
-        run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/archetypes
+      # - name: Transform (series)
+      #   working-directory: yaml-yugi/data/series
+      #   run: python3 ../../src/main_archetypes.py ../../../yaml-yugipedia/wikitext/archetypes
       - name: Transform (OCG+TCG)
         working-directory: yaml-yugi/data/cards
         run: |
@@ -64,12 +64,12 @@ jobs:
           python3 ../../src/main_rush.py \
             ../../../yaml-yugipedia/wikitext/rush \
             --aggregate ../../../aggregate/rush.json
-      - name: Transform (TCG Speed Duel Skills)
-        working-directory: yaml-yugi/data/tcg-speed-skill
-        run: |
-          python3 ../../src/main_speed.py \
-            ../../../yaml-yugipedia/wikitext/speed \
-            --aggregate ../../../aggregate/skill.json
+      # - name: Transform (TCG Speed Duel Skills)
+      #   working-directory: yaml-yugi/data/tcg-speed-skill
+      #   run: |
+      #     python3 ../../src/main_speed.py \
+      #       ../../../yaml-yugipedia/wikitext/speed \
+      #       --aggregate ../../../aggregate/skill.json
       - name: Commit
         id: commit
         run: |
@@ -92,15 +92,15 @@ jobs:
           git commit -m "Merge: ${{ github.run_number }} (${{ github.run_id }})" -m "$(git -C ../yaml-yugi rev-parse @)"
           git pull --rebase origin aggregate
           git push
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-          cache: yarn
-          cache-dependency-path: yaml-yugi/yarn.lock
-      - run: yarn
-      - name: Load (push)
-        env:
-          OPENSEARCH_URL: ${{ secrets.OS_URL }}
-        run: |
-          yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg
-          yarn ts-node src/load.ts ../aggregate/rush.yaml yu-gi-oh_rush
+      # - uses: actions/setup-node@v3
+      #   with:
+      #     node-version: 16
+      #     cache: yarn
+      #     cache-dependency-path: yaml-yugi/yarn.lock
+      # - run: yarn
+      # - name: Load (push)
+      #   env:
+      #     OPENSEARCH_URL: ${{ secrets.OS_URL }}
+      #   run: |
+      #     yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg
+      #     yarn ts-node src/load.ts ../aggregate/rush.yaml yu-gi-oh_rush
