--- a/.github/workflows/merge.yaml
+++ b/.github/workflows/merge.yaml
@@ -92,15 +92,15 @@ jobs:
           git commit -m "Merge: ${{ github.run_number }} (${{ github.run_id }})" -m "$(git -C ../yaml-yugi rev-parse @)"
           git pull --rebase origin aggregate
           git push
-      # - uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 16
-      #     cache: yarn
-      #     cache-dependency-path: yaml-yugi/yarn.lock
-      # - run: yarn
-      # - name: Load (push)
-      #   env:
-      #     OPENSEARCH_URL: ${{ secrets.OS_URL }}
-      #   run: |
-      #     yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg
-      #     yarn ts-node src/load.ts ../aggregate/rush.yaml yu-gi-oh_rush
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: yarn
+          cache-dependency-path: yaml-yugi/yarn.lock
+      - run: yarn
+      - name: Load (push)
+        env:
+          OPENSEARCH_URL: ${{ secrets.OS_URL }}
+        run: |
+          yarn ts-node src/load.ts ../aggregate/cards.yaml yu-gi-oh_ocg-tcg_20230501
+          yarn ts-node src/load.ts ../aggregate/rush.yaml yu-gi-oh_rush_20230501
