--- a/rush.yaml
+++ b/rush.yaml
@@ -95834,6 +95834,63 @@ sets:
     - Common
 yugipedia_page_id: 901240
 ---
+konami_id: 18907
+name:
+  en: Satellite Soldier
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: サテライトソルジャー
+  ja_romaji: Sateraito Sorujā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    デッキの一番上のカードを墓地へ送って発動できる。
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Increase the Level of 1 face-up Level 6 or lower monster on your field with 1000 DEF by 2 until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: |-
+    自分フィールドの表側表示モンスター（レベル６以下／守備力１０００）１体を選び、そのレベルをターン終了時まで２上げる。
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 5
+atk: 1700
+def: 1000
+images:
+- index: 1
+  image: SatelliteSoldier-RDSJMP-JP-NPR.png
+sets:
+  ja:
+  - set_number: RD/SJMP-JP027
+    set_name: Saikyō Jump June 2023 promotional card
+    rarities:
+    - Normal Parallel Rare
+yugipedia_page_id: 903539
+---
 konami_id: 19012
 name:
   en: Majestic Masterburst
@@ -96210,61 +96267,6 @@ sets:
     rarities:
     - Rare
 yugipedia_page_id: 902032
----
-konami_id:
-name:
-  en: Satellite Soldier
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja: サテライトソルジャー
-  ja_romaji: Sateraito Sorujā
-  ko:
-  ko_rr:
-  zh-TW:
-  zh-CN:
-requirement:
-  en: |-
-    Send the top card of your Deck to the Graveyard.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-effect:
-  en: |-
-    Increase the Level of 1 face-up Level 6 or lower monster on your field with 1000 DEF by 2, until the end of this turn.
-  de:
-  es:
-  fr:
-  it:
-  pt:
-  ja:
-  ko:
-  zh-TW:
-  zh-CN:
-card_type: Monster
-monster_type_line: Galaxy / Effect
-attribute: LIGHT
-level: 5
-atk: 1700
-def: 1000
-images:
-- index: 1
-  image: SatelliteSoldier-RDSJMP-JP-OP.png
-sets:
-  ja:
-  - set_number: RD/SJMP-JP027
-    set_name: Saikyō Jump June 2023 promotional card
-    rarities:
-    - Normal Parallel Rare
-yugipedia_page_id: 903539
 ---
 konami_id:
 name:
@@ -98738,3 +98740,60 @@ sets:
     rarities:
     - Normal Parallel Rare
 yugipedia_page_id: 932073
+---
+konami_id:
+name:
+  en: Plaster Scout
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>石膏の斥候<rt>プラスター・スカウト</rt></ruby>
+  ja_romaji: Purasutā Sukauto
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    None
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect_types:
+- Continuous
+effect:
+  en: |-
+    During your opponent's Main Phase, you take no damage from your opponent's card effects.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Warrior / Effect
+attribute: EARTH
+level: 4
+atk: 1300
+def: 1000
+images:
+- index: 1
+  image: PlasterScout-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP029
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 932086
