--- a/rush.yaml
+++ b/rush.yaml
@@ -98849,3 +98849,284 @@ sets:
     - Super Rare
     - Secret Rare
 yugipedia_page_id: 932194
+---
+konami_id:
+name:
+  en: Mad Rare Aquila
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: マッドレア・アクエラ
+  ja_romaji:
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    If your opponent has 2 or more monsters on their field, send the top card of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This turn, this card can attack twice. Also, you can destroy 1 face-up Level 6 Effect Monster on your opponent's field. Then, if you destroyed a monster by this effect, this card gains 600 ATK until the end of this turn.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Winged Beast / Effect
+attribute: DARK
+level: 4
+atk: 1300
+def: 1100
+images:
+- index: 1
+  image: MadRareAquila-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP030
+    set_name: Oblivion of the Flash
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 932329
+---
+konami_id:
+name:
+  en: Protection of Arthenée
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: アルテネの<ruby>加<rt>か</rt></ruby><ruby>護<rt>ご</rt></ruby>
+  ja_romaji: Arutene no Kago
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Shuffle 1 monster from your Graveyard into the Deck, and equip this card to 1 face-up monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster cannot be destroyed by your opponent's card effects. Also, if you have an Equip Spell Card in your Graveyard, the equipped monster gains 300 ATK.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: ProtectionofArthenée-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP057
+    set_name: Oblivion of the Flash
+    rarities:
+    - Super Rare
+    - Secret Rare
+yugipedia_page_id: 932330
+---
+konami_id:
+name:
+  en: EXTRAplorer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>ＥＸ<rt>エクストラ</rt></ruby>プローラー
+  ja_romaji: Ekusutorapurōrā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    This card gains 300 ATK until the end of this turn. Then, if you have 5 or more Galaxy Type monsters in your Graveyard, you can add up to 1 Galaxy Type Normal Monster and up to 1 "Fusion" from your Graveyard to your hand.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Effect
+attribute: LIGHT
+level: 7
+atk: 2300
+def: 2200
+images:
+- index: 1
+  image: EXTRAplorer-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP031
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 932331
+---
+konami_id:
+name:
+  en: Space Fusion - EXTRAplasmer
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>ＳＦ<rt>スペースフュージョン</rt></ruby>－<ruby>ＥＸ<rt>エクストラ</rt></ruby>プラズマー
+  ja_romaji: Supēsu Fyūjon - Ekusutorapurazumā
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Send the top 2 cards of your Deck to the Graveyard.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    Destroy 1 card in your opponent's Spell & Trap Zone.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Monster
+monster_type_line: Galaxy / Fusion / Effect
+attribute: LIGHT
+level: 9
+atk: 3000
+def: 2000
+materials:
+  en: |-
+    "EXTRAplorer" + 1 LIGHT Attribute Galaxy Type monster
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+images:
+- index: 1
+  image: SpaceFusionEXTRAplasmer-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP045
+    set_name: Oblivion of the Flash
+    rarities:
+    - Common
+yugipedia_page_id: 932332
+---
+konami_id:
+name:
+  en: Grace Spear the Magical Spear
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja: <ruby>魔<rt>ま</rt></ruby><ruby>導<rt>どう</rt></ruby><ruby>槍<rt>そう</rt></ruby>グレイス・スピア
+  ja_romaji: Madōsō Gureisu Supia
+  ko:
+  ko_rr:
+  zh-TW:
+  zh-CN:
+requirement:
+  en: |-
+    Equip this card to 1 face-up Magical Knight or Spellcaster Type monster on your field.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+effect:
+  en: |-
+    The equipped monster gains 200 ATK, and if it attacks a Defense Position monster, inflict piercing battle damage (if the ATK of the attacking monster exceeds the DEF of the attack target, inflict the difference). If the equipped monster is Magical Knight Type, it gains additional ATK equal to [its Level] x 200.
+  de:
+  es:
+  fr:
+  it:
+  pt:
+  ja:
+  ko:
+  zh-TW:
+  zh-CN:
+card_type: Spell
+property: Equip
+images:
+- index: 1
+  image: GraceSpeartheMagicalSpear-RDKP13-JP-OP.png
+sets:
+  ja:
+  - set_number: RD/KP13-JP055
+    set_name: Oblivion of the Flash
+    rarities:
+    - Rare
+yugipedia_page_id: 932337
