--- a/data/cards/02273734.yaml
+++ b/data/cards/02273734.yaml
@@ -125,6 +125,11 @@ sets:
     set_name: Advanced Event Pack 2015 Vol.2
     rarities:
     - Secret Rare
+  zh-CN:
+  - set_number: CL04-SC169
+    set_name: Classic Pack 04
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
