--- a/data/cards/42589641.yaml
+++ b/data/cards/42589641.yaml
@@ -122,6 +122,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL04-SC181
+    set_name: Classic Pack 04
+    rarities:
+    - Super Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
