--- a/data/cards/56638325.yaml
+++ b/data/cards/56638325.yaml
@@ -125,6 +125,11 @@ sets:
     rarities:
     - Ultra Rare
     - Secret Rare
+  zh-CN:
+  - set_number: CL04-SC180
+    set_name: Classic Pack 04
+    rarities:
+    - Secret Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
