--- a/data/cards/64414267.yaml
+++ b/data/cards/64414267.yaml
@@ -94,6 +94,11 @@ sets:
     - Ultra Rare
     - Secret Rare
     - Ultimate Rare
+  zh-CN:
+  - set_number: CL04-SC184
+    set_name: Classic Pack 04
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
