--- a/data/cards/65236257.yaml
+++ b/data/cards/65236257.yaml
@@ -76,6 +76,11 @@ sets:
     set_name: 'Invasion: Vengeance'
     rarities:
     - Common
+  zh-CN:
+  - set_number: CL04-SC188
+    set_name: Classic Pack 04
+    rarities:
+    - Common
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
