--- a/data/cards/75878039.yaml
+++ b/data/cards/75878039.yaml
@@ -105,6 +105,11 @@ sets:
     set_name: Advanced Event Pack 2014 Vol.4
     rarities:
     - Super Rare
+  zh-CN:
+  - set_number: CL04-SC168
+    set_name: Classic Pack 04
+    rarities:
+    - Rare
 limit_regulation:
   tcg: Unlimited
   ocg: Unlimited
